--- a/man/figures/tables/Rmd/binom.ss.Rmd
+++ b/man/figures/tables/Rmd/binom.ss.Rmd
@@ -14,9 +14,13 @@ colorize <- function(x, color) {
   if (knitr::is_latex_output()) {
     sprintf("\\textcolor{%s}{%s}", color, x)
   } else if (knitr::is_html_output()) {
-    sprintf("<span style='color: %s;'>%s</span>", color, 
-      x)
-  } else x
+    sprintf(
+      "<span style='color: %s;'>%s</span>", color,
+      x
+    )
+  } else {
+    x
+  }
 }
 library(jfa)
 ```
@@ -31,19 +35,23 @@ library(jfa)
 ```
 
 ```{r, include = F}
-
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level = 0.90, expected = expected[rows], likelihood = "binomial", materiality = m[columns])) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level = 0.90, expected = expected[rows], likelihood = "binomial", materiality = m[columns]))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -52,26 +60,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 1: Statistical Sample Sizes based on the Binomial Distribution — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 1: Statistical Sample Sizes based on the Binomial Distribution — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -81,19 +89,23 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level = 0.95, expected = expected[rows], likelihood = "binomial", materiality = m[columns])) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level = 0.95, expected = expected[rows], likelihood = "binomial", materiality = m[columns]))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -102,26 +114,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 2: Statistical Sample Sizes based on the Binomial Distribution — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 2: Statistical Sample Sizes based on the Binomial Distribution — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -131,19 +143,23 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level = 0.975, expected = expected[rows], likelihood = "binomial", materiality = m[columns])) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level = 0.975, expected = expected[rows], likelihood = "binomial", materiality = m[columns]))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -152,26 +168,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 3: Statistical Sample Sizes based on the Binomial Distribution — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 3: Statistical Sample Sizes based on the Binomial Distribution — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -181,19 +197,23 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level = 0.99, expected = expected[rows], likelihood = "binomial", materiality = m[columns])) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level = 0.99, expected = expected[rows], likelihood = "binomial", materiality = m[columns]))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -202,24 +222,24 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 4: Statistical Sample Sizes based on the Binomial Distribution — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 4: Statistical Sample Sizes based on the Binomial Distribution — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
