--- a/man/figures/tables/Rmd/binom.ub.Rmd
+++ b/man/figures/tables/Rmd/binom.ub.Rmd
@@ -14,9 +14,13 @@ colorize <- function(x, color) {
   if (knitr::is_latex_output()) {
     sprintf("\\textcolor{%s}{%s}", color, x)
   } else if (knitr::is_html_output()) {
-    sprintf("<span style='color: %s;'>%s</span>", color, 
-      x)
-  } else x
+    sprintf(
+      "<span style='color: %s;'>%s</span>", color,
+      x
+    )
+  } else {
+    x
+  }
 }
 library(jfa)
 ```
@@ -31,39 +35,38 @@ library(jfa)
 ```
 
 ```{r, include = F}
-
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
-for(rows in 1:length(n)){
-  for(columns in 1:length(k)){
-      ss <- evaluation(conf.level = 0.90, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+for (rows in 1:length(n)) {
+  for (columns in 1:length(k)) {
+    ss <- evaluation(conf.level = 0.90, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
+    tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
-colnames(table) <- c('Sample Size', k)
-
+colnames(table) <- c("Sample Size", k)
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 2, 
-                       caption = "<center>Table 1: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 10 Percent Risk of Overreliance</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 2,
+  caption = "<center>Table 1: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 10 Percent Risk of Overreliance</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
 ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -73,39 +76,38 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
-for(rows in 1:length(n)){
-  for(columns in 1:length(k)){
-      ss <- evaluation(conf.level = 0.95, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+for (rows in 1:length(n)) {
+  for (columns in 1:length(k)) {
+    ss <- evaluation(conf.level = 0.95, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
+    tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
-colnames(table) <- c('Sample Size', k)
-
+colnames(table) <- c("Sample Size", k)
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 2, 
-                       caption = "<center>Table 2: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 5 Percent Risk of Overreliance</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 2,
+  caption = "<center>Table 2: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 5 Percent Risk of Overreliance</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
 ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -115,39 +117,38 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
-for(rows in 1:length(n)){
-  for(columns in 1:length(k)){
-      ss <- evaluation(conf.level = 0.975, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+for (rows in 1:length(n)) {
+  for (columns in 1:length(k)) {
+    ss <- evaluation(conf.level = 0.975, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
+    tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
-colnames(table) <- c('Sample Size', k)
-
+colnames(table) <- c("Sample Size", k)
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 2, 
-                       caption = "<center>Table 3: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 2.5 Percent Risk of Overreliance</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 2,
+  caption = "<center>Table 3: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 2.5 Percent Risk of Overreliance</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
 ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -157,37 +158,36 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
-for(rows in 1:length(n)){
-  for(columns in 1:length(k)){
-      ss <- evaluation(conf.level = 0.95, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+for (rows in 1:length(n)) {
+  for (columns in 1:length(k)) {
+    ss <- evaluation(conf.level = 0.95, n = n[rows], x = k[columns], materiality = 0.99, method = "binomial")
+    tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
-colnames(table) <- c('Sample Size', k)
-
+colnames(table) <- c("Sample Size", k)
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 2, 
-                       caption = "<center>Table 4: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 1 Percent Risk of Overreliance</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 2,
+  caption = "<center>Table 4: Statistical Sampling Results based on the Binomial Distribution — <br>Upper Limits at 1 Percent Risk of Overreliance</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
 ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
