--- a/man/figures/tables/Rmd/hyper.ss.Rmd
+++ b/man/figures/tables/Rmd/hyper.ss.Rmd
@@ -14,9 +14,13 @@ colorize <- function(x, color) {
   if (knitr::is_latex_output()) {
     sprintf("\\textcolor{%s}{%s}", color, x)
   } else if (knitr::is_html_output()) {
-    sprintf("<span style='color: %s;'>%s</span>", color, 
-      x)
-  } else x
+    sprintf(
+      "<span style='color: %s;'>%s</span>", color,
+      x
+    )
+  } else {
+    x
+  }
 }
 library(jfa)
 ```
@@ -31,20 +35,24 @@ library(jfa)
 ```
 
 ```{r, include = F}
-
 conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -53,26 +61,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 1: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 1: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -82,20 +90,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -104,26 +116,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 2: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 2: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -133,20 +145,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.90
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -155,26 +171,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 3: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 3: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>10 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -184,20 +200,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -206,26 +226,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 4: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 4: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -235,20 +255,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -257,26 +281,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 5: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 5: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -286,20 +310,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.95
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.10, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -308,26 +336,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 6: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 6: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -337,20 +365,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -359,26 +391,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 7: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 7: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -388,20 +420,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -410,26 +446,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 8: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 8: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -439,20 +475,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.975
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -461,26 +501,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 9: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 9: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>2.5 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -490,20 +530,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 100))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -512,26 +556,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 10: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 10: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 100) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -541,20 +585,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 500))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -563,26 +611,26 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 11: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 11: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 500) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
 
 \newpage
@@ -592,20 +640,24 @@ kableExtra::kable_paper(ktable, "striped")
 </p>
 
 ```{r, include = F}
-
 conf.level <- 0.99
 m <- c(seq(0.01, 0.10, 0.01), 0.15, 0.20)
 expected <- seq(0, 0.1, 0.0025)
 
 tab <- matrix(NA, nrow = length(expected), ncol = length(m))
-for(rows in 1:length(expected)){
-  for(columns in 1:length(m)){
-    if(expected[rows] >= m[columns]){
+for (rows in 1:length(expected)) {
+  for (columns in 1:length(m)) {
+    if (expected[rows] >= m[columns]) {
       next
     } else {
-      p <- try({ suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000)) }, silent = T)
-      if(inherits(p, "try-error")){
-        next 
+      p <- try(
+        {
+          suppressMessages(ss <- planning(conf.level, expected = expected[rows], likelihood = "hypergeometric", materiality = m[columns], N.units = 1000))
+        },
+        silent = T
+      )
+      if (inherits(p, "try-error")) {
+        next
       }
       tab[rows, columns] <- paste0(ss$n, " (", ss$x, ")")
     }
@@ -614,24 +666,24 @@ for(rows in 1:length(expected)){
 
 table <- as.data.frame(tab, stringsAsFactors = F)
 table <- cbind(expected = paste0(round(expected * 100, 2), "%"), table)
-colnames(table) <- c('Expected Misstatement Rate', paste0(round(m * 100, 2), "%"))
+colnames(table) <- c("Expected Misstatement Rate", paste0(round(m * 100, 2), "%"))
 table[is.na(table)] <- ""
-
 ```
 
 ```{r, echo = FALSE}
-ktable <- knitr::kable(table, 
-                       digits = 0, 
-                       caption = "<center>Table 12: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
-                       align = "l", 
-                       format = "html", 
-                       row.names = FALSE, 
-                       format.args = list(big.mark = ",", scientific = FALSE),
-                       table.attr = "style='width:150%;'")
-ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
+ktable <- knitr::kable(table,
+  digits = 0,
+  caption = "<center>Table 12: Statistical Sample Sizes based on the Hypergeometric Distribution (N = 1000) — <br>1 Percent Risk of Overreliance (with number of expected errors in parentheses)</center>",
+  align = "l",
+  format = "html",
+  row.names = FALSE,
+  format.args = list(big.mark = ",", scientific = FALSE),
+  table.attr = "style='width:150%;'"
+)
+ktable <- kableExtra::kable_classic(ktable, position = "center", html_font = "Cambria")
 ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Performance Materiality" = 12))
 ktable <- kableExtra::footnote(ktable, general = "Sample sizes over 5000 items are not shown")
-ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
+ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table) - 1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
-kableExtra::kable_paper(ktable, "striped") 
+kableExtra::kable_paper(ktable, "striped")
 ```
